v1.0/getting-started/project-glossary.md
---
title: "Project glossary"
excerpt: ""
---
[block:parameters]
{
  "data": {
    "0-1": "Authentication and Authorisation for Research and Collaboration, [https://aarc-project.eu/](https://aarc-project.eu/)",
    "0-0": "AARC",
    "2-1": "Application Program Interface",
    "2-0": "API",
    "3-0": "ARK",
    "3-1": "Archival Resource Key, identifier for information objects of any type",
    "4-0": "BioCaddie",
    "4-1": "Biomedical  and  healthCAre  Data  Discovery  Index  Ecosystem, [https://biocaddie.org/](https://biocaddie.org/)",
    "1-0": "ANDS",
    "1-1": "Australian National Data Service, [http://www.ands.org.au/](http://www.ands.org.au/)",
    "5-0": "CASRAI",
    "5-1": "Consortia Advancing Standards in Research Administration Information, [http://casrai.org/](http://casrai.org/)",
    "6-0": "CERN",
    "6-1": "European Organization for Nuclear Research, [home.cern](home.cern)",
    "8-0": "DataCite",
    "7-0": "CrossRef",
    "7-1": "An official Digital Object Identifier Registration Agency of the International DOI Foundation,  working to make content easy to find, link, cite and assess in scholarly publishing, [http://www.crossref.org/](http://www.crossref.org/)",
    "8-1": "An organisation that develops and supports methods to locate, identify and cite data and other research objects. Specifically, DataCite develops and supports the standards behind persistent identifiers for data, and the members assign them, [https://www.datacite.org](https://www.datacite.org)",
    "9-0": "DCC",
    "9-1": "Digital Curation Centre, [http://www.dcc.ac.uk/](http://www.dcc.ac.uk/)",
    "10-0": "DOI",
    "10-1": "Digital Object Identifier",
    "11-0": "DSpace",
    "11-1": "Software application to build open repositories, [http://www.dspace.org/](http://www.dspace.org/)",
    "12-0": "EU",
    "12-1": "European Union",
    "13-1": "European Commission",
    "13-0": "EC",
    "14-0": "EMBL-EBI",
    "14-1": "The European Bioinformatics Institute, Part of the European Molecular Biology Laboratory, [http://www.ebi.ac.uk/](http://www.ebi.ac.uk/)",
    "15-0": "EuroCRIS",
    "15-1": "European Current Research Information Systems, [http://www.eurocris.org/](http://www.eurocris.org/)",
    "16-0": "ETD",
    "16-1": "Electronic Theses and Dissertations",
    "17-0": "EVER-EST",
    "17-1": "European Virtual Environment for Research - Earth Science Themes",
    "18-0": "Eprints",
    "18-1": "Open resource digital repository platform, [http://www.eprints.org/](http://www.eprints.org)",
    "19-0": "Fedora",
    "19-1": "Open source repository system for the management and dissemination of digital content, [http://fedorarepository.org/](http://fedorarepository.org/)",
    "20-0": "FORCE11",
    "20-1": "Future of Research Communications and e-Scholarship: community of scholars, librarians, archivists, publishers and research funders that has arisen organically to help facilitate the change toward improved knowledge creation and sharing, [https://www.force11.org/](https://www.force11.org/)",
    "21-1": "A standard way of reporting funding sources for published scholarly research, [http://www.crossref.org/fundingdata/index.html](http://www.crossref.org/fundingdata/index.html)",
    "21-0": "Fundref",
    "22-0": "GRID",
    "22-1": "Global Research Identifier Database, [https://grid.ac/](https://grid.ac/)",
    "23-0": "Handle",
    "23-1": "Prefix registration system, [www.handle.net](www.handle.net)",
    "25-0": "IFLA",
    "24-0": "ID",
    "24-1": "Identifier",
    "25-1": "International Federation of Library Associations and Institutions, [http://www.ifla.org/](http://www.ifla.org/)",
    "26-0": "Invinio",
    "26-1": "Software applications for digital libraries, [http://invenio-software.org/](http://invenio-software.org/)",
    "27-0": "ISNI",
    "27-1": "International Standard Name Identifier",
    "28-0": "JISC",
    "28-1": "UK higher education, further education and skills sectors’ not-for-profit organisation for digital services and solutions, [https://www.jisc.ac.uk/](https://www.jisc.ac.uk/)",
    "29-0": "Jupyter",
    "29-1": "Web application that enables the creation and sharing of documents that contain live code.",
    "30-0": "KPI",
    "30-1": "Key Performance Indicator",
    "31-0": "LIBER",
    "31-1": "Ligue des Bibliothèques Européennes de Recherche (Association of European Research Libraries), [http://libereurope.eu/](http://libereurope.eu/)",
    "32-0": "NISO",
    "32-1": "National Information Standards Organisation, [http://www.niso.org/home/](http://www.niso.org/home/)",
    "33-0": "ODIN",
    "33-1": "ORCID and DataCite Interoperability Network, [https://odin-project.eu/](https://odin-project.eu/)",
    "34-1": "Project that seeks to connect aggregated research publications to the accompanying research and project information, datasets and author information, [https://www.openaire.eu/](https://www.openaire.eu/)",
    "34-0": "OpenAIRE",
    "35-0": "OpenDreamKit",
    "35-1": "Open Digital Research Environment Toolkit for the Advancement of Mathematics, [www.opendreamkit.org](www.opendreamkit.org)",
    "36-0": "ORCID",
    "36-1": "Original Researcher and Contributer ID, [http://orcid.org](http://orcid.org)",
    "37-0": "PANGAEA",
    "37-1": "An information system and data publisher for geoscientific and environmental data, [https://www.pangaea.de/](https://www.pangaea.de/)",
    "38-0": "PID",
    "38-1": "Persistent Identifier",
    "39-0": "PRACE",
    "39-1": "Partnership for Advanced Computing in Europe, [www.prace-ri.eu](www.prace-ri.eu)",
    "40-0": "Re3data",
    "40-1": "Registry of Research Data Repositories, [www.re3data.org](www.re3data.org)",
    "47-0": "UKSG",
    "47-1": "Organisation that aims to connect the knowledge community and encourage the exchange of ideas on scholarly communication, spanning librarians, publishers, intermediaries and technology vendors, [http://www.uksg.org/](http://www.uksg.org/)",
    "41-0": "REFEDS",
    "41-1": "Research and Education FEDerations Group",
    "42-0": "RDA",
    "42-1": "Research Data Alliance, [https://rd-alliance.org/](https://rd-alliance.org/)",
    "43-0": "Ringgold",
    "43-1": "Organisation that provides unique identifiers for organisations in the publishing industry supply chain, [http://www.ringgold.com/](http://www.ringgold.com/)",
    "44-0": "RRID",
    "44-1": "Research Resource Identifier",
    "45-0": "SDK",
    "45-1": "Software Development Kit",
    "46-0": "THOR",
    "46-1": "Technical and Human Infrastructure for Open Research, [https://project-thor.eu/](https://project-thor.eu/)",
    "48-0": "UX",
    "48-1": "User eXperience"
  },
  "cols": 2,
  "rows": 49
}
[/block]